--- a/header.css
+++ b/header.css
@@ -1,5 +1,29 @@
 header{
-    position: absolute;
+    display: flex;
     width: 100%;
-    height: 5%;
+    height: 7%;
+    background-color: rgb(201, 115, 9);
+    justify-content: space-between;
+}
+
+a{
+    margin-bottom: 1%;
+    font-variant: small-caps;
+    font-weight: bold;
+    font-size: xx-large;
+    font-family: "Oswald", sans-serif;
+    color: whitesmoke;
+    margin-left: 5%;
+    white-space: nowrap;
+}
+
+.head-left, .head-right{
+    display: flex;
+    align-items: center;
+    width: 50%;
+    justify-content: center;
+}
+
+.head-right{
+    justify-content: center;
 }
