--- a/main.css
+++ b/main.css
@@ -1,7 +1,31 @@
 html{ height: 100%;}
 
 body{
+    display: flex;
+    flex-direction: column;
     margin: 0;
-    height: 100%;
     background-color: rgb(18, 17, 15);
+}
+
+.hot-new{
+    padding-top:0.5%;
+    display: flex;
+    width: 100%;
+    height: 40%;
+    background-color: rgb(28, 28, 28);
+}
+
+.main-agregator{
+    position: relative;
+    padding-top:1%;
+    display: flex;
+    left:5%;
+    width: 90%;
+    height: 800px;
+}
+
+.main-agregator-in{
+    justify-content: center;
+    width: 33.3%;
+    height: 100%;
 }
