--- a/CSS/mini-plate.css
+++ b/CSS/mini-plate.css
@@ -1,16 +1,21 @@
 .mini-plate img{
     max-height: 100%;
     width: auto;
-
-}
+    border-radius: 10%;
+}   
 
 .mini-plate {
     display: flex;
-    justify-content: center;
     height: 10%;
-    width: 100%;
+    border-radius: 10%;
+    max-width: 40%;
     margin-top: 1%;
     margin-bottom: 1%;
+    cursor: pointer;
+}
+
+.mini-plate:hover {
+    background-color: var(--accent-color);
 }
 
 .mini-plate div{
@@ -26,5 +31,5 @@
     font-weight: bold;
     font-size: small;
     font-family: "Oswald", sans-serif;
-    color: rgb(225, 225, 225);
+    color: var(--text-color);
 }
