--- a/CSS/acc.css
+++ b/CSS/acc.css
@@ -3,11 +3,12 @@ body{
     background-color: var(--background-color);
 }
 
-section{
+.content{
     color: var(--text-color);
+    position: relative;
     width: 80%;
     left: 10%;
-    padding-top: 5%;
+    padding-top: 10%;
     padding-bottom: 10%;
     background-color: var(--header-color);
     border-radius: 20px;
@@ -16,7 +17,12 @@ section{
     border-color: var(--accent-color);
     display: flex;
     flex-direction: column;
-    align-items: center
+    align-items: center;
+    font-variant: small-caps;
+    font-weight: bold;
+    font-size: 2em;
+    line-height: 1.2;
+    font-family: "Golos Text";
 }
 
 form{
@@ -40,9 +46,8 @@ form{
 }
 
 #acc-plate{
-    margin-top: 1%;
     width: 100%;
-    height: 40%;
+    height: 50%;
     display: flex;
     flex-direction: row;
 }
