--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,14 +1,14 @@
 :root {
     --background-color: rgb(18, 17, 15);
     --text-color: whitesmoke;
-    --accent-color: rgb(53, 53, 52);
+    --accent-color: rgb(84, 84, 82);
     --header-color: rgb(38, 37, 36);
 }
 
 :root.light-theme {
     --background-color: rgb(218, 217, 215);
     --text-color: rgb(16, 15, 15);
-    --accent-color: rgb(253, 253, 252);
+    --accent-color: rgb(54, 54, 53);
     --header-color: rgb(238, 237, 236);
 }
 
@@ -18,6 +18,7 @@ body{
 }
 
 section{
+    padding-top: 60px;
     position: relative;
 }
 
@@ -50,6 +51,8 @@ section{
         flex-direction: column;
         border-bottom: 0;
         align-items: unset;
+        margin-left: 0.5%;
+        margin-right: 0.5%;
     }
     .main-agregator{
         display: none;
