--- a/CSS/main.css
+++ b/CSS/main.css
@@ -39,6 +39,29 @@ section{
     height: 800px;
 }
 
+.content{
+    color: var(--text-color);
+    position: relative;
+    width: 80%;
+    left: 10%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    display: flex;
+    align-items: center;
+    font-variant: small-caps;
+    font-weight: bold;
+    font-size: 2em;
+    line-height: 1.2;
+    font-family: "Golos Text";
+}
+
+.content-mod{
+    flex-direction: column;
+    background-color: var(--header-color);
+    border-radius: 20px;
+    border: 4px solid var(--accent-color);
+}
+
 .main-agregator-in{
     justify-content: center;
     width: 33.3%;
